--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.48
+version=0.49
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -24,6 +24,8 @@ SHARYANTO::Array::Util=0
 ;;for middleware PeriAHS::ParseRequest
 Data::Clean::FromJSON=0.11
 Perinci::Access::Schemeless=0.56
+;!lint-prereqs assume-used # force version
+Perinci::Sub::GetArgs::Argv=0.35
 Perinci::Sub::GetArgs::Array=0
 ;!lint-prereqs assume-used # used via periwrap
 ;Perinci::Sub::Property::timeout=0
